add js for calculate

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="calculator">
       <div class="buttons">
-        <h2 id="value">123</h2>
+        <h2 id="value"></h2>
         <span id="clear">Clear</span>
         <span>/</span>
         <span>*</span>
@@ -30,5 +30,24 @@
         <span id="equal">=</span>
       </div>
     </div>
+    <script>
+      let buttons = document.querySelector(".buttons");
+      let btns = document.querySelectorAll("span");
+      let value = document.getElementById("value");
+
+      for (let i = 0; i < btns.length; i++) {
+        btns[i].addEventListener("click", function () {
+          if (this.innerHTML == "=") {
+            value.innerHTML = eval(value.innerHTML);
+          } else {
+            if (this.innerHTML == "Clear") {
+              value.innerHTML = "";
+            } else {
+              value.innerHTML += this.innerHTML;
+            }
+          }
+        });
+      }
+    </script>
   </body>
 </html>
